--- a/style.css
+++ b/style.css
@@ -80,13 +80,13 @@ button {
 
 .random-container {
     display: flex;
-    height: 320px;
+    height: 400px;
     flex-direction: column;
+    justify-content: center;
 }
 .random-title {
     display: flex;
     justify-content: center;
-    padding: 20px;
     font-size: 36px;
     color: #1F2937;
     font-weight: bolder;
@@ -95,7 +95,8 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    color: #1F2937
+    color: #1F2937;
+    padding: 45px 40px 20px 40px;
 
 }
 .random-imgs {
@@ -107,12 +108,73 @@ button {
     padding: 0px 20px 0px 20px;
 }
 .box {
-    border:solid 2px #3882F6;
+    border:solid 4px #3882F6;
     width: 120px;
     height: 120px;
-    border-radius: 4px;
+    border-radius: 6px;
     margin-bottom: 8px;
 }
 .random-text {
     padding-left: 10px;
+}
+.quote-container {
+    display: flex;
+    height: 400px;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.quote {
+    width: 600px;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+.thor {
+    align-self: flex-end;
+    padding-right: 280px;
+    padding-top: 10px;
+    font-weight: bold;
+}
+.bottom-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 360px;
+}
+.action-box {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    background-color: #3882F6;
+    height: 180px;
+    width: 820px;
+    border-radius: 8px;
+}
+.call-action {
+    padding: 20px 0px 0px 80px;
+    font-size: 24px;
+    color: #F9FAF8;
+}
+.bottom-text {
+    padding-left: 80px;
+    font-size:18px;
+    color: #E5E7EB;
+}
+#button2 {
+    border: solid 2px white;
+    align-self: flex-end;
+    margin-right: 100px;
+}
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    background-color:#1F2937;
+    color: #E5E7EB;
+    font-size: 18px;
 }
